deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: hello-py-app
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py
            image: zubyakdr/python:v10
            ports:
              - name: web 
                containerPort: 80
