ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/zubyakdr/health($|/)(.*)
            backend:
              serviceName: hello-service
              servicePort: 8000
